2001-05-09  Braden McDaniel <braden@endoframe.com>

        * Fixed problem with PROTO instantiation where exposedFields
          were not handled correctly. (Patch from
          <jpw20@users.sourceforge.net>.)

        * Fixed problem when calling getField() on a PROTO to get the
          value of a field that had not had its default value
          overridden. findField() now returns the default value in this
          case. Fixes bug #229687:
          
          <http://sourceforge.net/tracker/index.php?func=detail&aid=229687&group_id=7151&atid=107151>
          
          (Patch from <jpw20@users.sourceforge.net>.)

        * Fix for bug #414259:
          
          <http://sourceforge.net/tracker/index.php?func=detail&aid=414259&group_id=7151&atid=107151>
          
          (Patch from <jpw20@users.sourceforge.net>.)

2001-05-01  Braden McDaniel <braden@endoframe.com>

        * Doxygen comments and cosmetic adjustments to VrmlNodeType.

2001-04-26  Braden McDaniel <braden@endoframe.com>

        * Added Doxygen comments for VrmlNodeChild.
        * Added Doxygen comments for VrmlNodeGeometry.
        * Added Doxygen comments for VrmlNodeLight.

2001-04-25  Braden McDaniel <braden@endoframe.com>

        * Applied patch from Joerg Scheurich
          <rusmufti@helpdesk.rus.uni-stuttgart.de> to accommodate
          higher-resolution textures in the Background node.

2001-04-24  Braden McDaniel <braden@endoframe.com>

        * Consolidated VRML97 node types in a single header and a single
          implementation file.

2001-04-23  Braden McDaniel <braden@endoframe.com>

        * Consolidated SF* and MF* types into a single header, `field.h'.

2001-04-12  Thomas Flynn <tflynn@users.sourceforge.net>
        * Checked in fixes for bugs 210011, 211349 and 407708.
          Updated conformance testing results.

2001-02-16  Braden McDaniel  <braden@endoframe.com>

        * Moved texture reading code to `Image.cpp'. This obsoletes the
          files: