@@ -1,3 +1,8 @@
+2001-05-19  Braden McDaniel <braden@endoframe.com>
+
+        * Made all single-argument constructors for field classes
+          "explicit".
+
 2001-05-09  Braden McDaniel <braden@endoframe.com>
 
         * Fixed problem with PROTO instantiation where exposedFields
